[gd_scene load_steps=4 format=3 uid="uid://lxqqd38fhd5w"]

[ext_resource type="Script" path="res://scripts/Order.gd" id="1_ko2yc"]
[ext_resource type="Texture2D" uid="uid://beowjlj88kq5j" path="res://assents/tiles/orders/order.png" id="2_kyvo7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13n6t"]
size = Vector2(36.25, 34)

[node name="Order" type="Area2D"]
z_index = 1
script = ExtResource("1_ko2yc")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_13n6t")

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(-14, 2)
scale = Vector2(1.71875, 1.71875)
texture = ExtResource("2_kyvo7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
